# bcr2kosc

./: Cargo.toml  bcr2kosc.ReaperOSC  example.bcl  readme.md  todo.txt
src/: b_control.rs  bcl.rs  main.rs  midi_io.rs  midi_util.rs  osc_design.txt  osc_service.rs  translator.rs  winrt.rs
src/b_control/: io.rs
src/midi_io/: error.rs
src/translator/: ccx.rs
