[package]
name = "bcr2kosc"
version = "0.1.0"
edition = "2021"
authors = [ "dan.muller@dmuller.us" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = {version = "0.8.0", features = [] }
clap = { version = "4.0.14", features = ["derive"] }
log = "0.4.17"
stderrlog = "0.5.3"
rosc = "0.9.1"
midi-control = "0.2.1"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
pin-project = "1.0.12"



